[gd_scene load_steps=4 format=3 uid="uid://cm2m4cps6lnq"]

[ext_resource type="Script" uid="uid://0mpka6bilbyr" path="res://scripts/ui.gd" id="1_u7n8c"]
[ext_resource type="Texture2D" uid="uid://dxgqlnsjs360h" path="res://assets/vectors/health_bar_empty.svg" id="2_aac20"]
[ext_resource type="Texture2D" uid="uid://be24yniigfesd" path="res://assets/vectors/health_bar_full.svg" id="3_g5kmx"]

[node name="UI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_u7n8c")

[node name="HealthBar" type="TextureProgressBar" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -1072.0
offset_top = -89.955
offset_right = -664.0
offset_bottom = -58.955
grow_horizontal = 2
grow_vertical = 0
max_value = 1000.0
texture_under = ExtResource("2_aac20")
texture_progress = ExtResource("3_g5kmx")

[node name="BlackScreen" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="GameOver" type="Label" parent="BlackScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -407.0
offset_top = -240.0
offset_right = 407.0
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 150
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NewGame" type="Label" parent="BlackScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -117.0
offset_top = 152.0
offset_right = 117.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 0)
theme_override_font_sizes/font_size = 70
text = "[ Press Enter or Start Button to restart ]"

[node name="Score" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -377.0
offset_top = -137.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 100
text = "Score: 0"
